<resources>
    <string name="app_name">DW Client</string>
    <string name="prompt_message">Please select schedule items:</string>
    <string name="button_confirm">Confirm</string>
    <string-array name="schedule_items_array">
        <item>Top soil</item>
        <item>Clay</item>
        <item>Unsuitable</item>
        <item>Cut to fill</item>
        <item>Other</item>
    </string-array>
    <string name="loads_message"> load(s) completed</string>
    <string name="string_loaded">Loaded</string>
    <string name="drag_up">Drag over to unload</string>
    <string name="drag_down">Drag over to load</string>
    <string name="string_unloaded">Unloaded</string>
    <string name="label_machine_change">Change</string>
    <string name="operator_name_label">Operator name</string>
    <string name="machine_name_text">Scraper S8946L</string>
    <string name="operator_name_text">John Smith</string>
    <string name="operator_name_input_label">Please enter your name:</string>
    <string name="machine_input_label">Machine</string>
    <string name="load">Start load</string>
    <string name="top_soil">Top soil</string>
    <string name="unload">Finish load</string>
    <string-array name="material_list">
        <item>Top soil</item>
        <item>Clay</item>
        <item>Unsuitable</item>
        <item>Cut to fill</item>
        <item>Other</item>
    </string-array>
    <string name="message_alert_unable_to_change_task">Task can only be changed when unloaded.</string>

    <string name="title_activity_launcher">LauncherActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="action_settings">settings</string>
    <string name="oprator_details">Operator Details</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="label_history_action">History</string>
    <string name="label_history_appbar_title">History</string>
    <string name="label_machine_name">Name</string>
    <string name="label_machine_fleetId">Fleet id</string>
    <string name="label_machine_category">Category</string>
    <string name="message_require_permissions">Please grant all permissions for the app to work.</string>
    <string name="message_plants_updated">New machine list fetched from the server.</string>
    <string name="message_plants_update_failure">Unable to fetch machines list from the server</string>
    <string name="message_tasks_updated">New task list fetched from the server.</string>
    <string name="message_tasks_update_failure">Unable to fetch tasks list from the server</string>
    <string name="title_activity_choose_machine">Select machine</string>
    <string name="message_choose_machine">Please tap here to select a machine.</string>
    <string name="message_error_operator_name_required">Operator name is required!</string>
</resources>
