<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dempseywood.operatordatacollector.EquipmentStatusActivity">

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="460dp"
        android:layout_height="59dp"
        android:layout_marginTop="8dp"
        android:text="@string/loads_message"
        android:textAlignment="textStart"
        android:gravity="start"
        android:textSize="36sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <Button
        android:id="@+id/unloadedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@drawable/active_unloaded"
        android:text="@string/string_unloaded"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/loadedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"

        android:background="@drawable/active_loaded"
        android:text="@string/string_loaded"
        android:textSize="24sp"
        app:layout_constraintLeft_toRightOf="@+id/unloadedButton"
        app:layout_constraintRight_toLeftOf="@+id/unloadedButton"
        app:layout_constraintTop_toBottomOf="@+id/instruction" />


    <TextView
        android:id="@+id/count"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:gravity="end"
        android:text="0"
        android:textAlignment="textEnd"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/instruction"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/drag_down"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/unloadedButton" />


</android.support.constraint.ConstraintLayout>
