<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"

        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.dempseywood.operatordatacollector.activities.CountByTapActivity">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:elevation="4dp"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                android:titleTextColor="@color/colorWhite"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="138dp"
                android:layout_height="121dp"
                android:layout_marginTop="7dp"
                app:layout_constraintRight_toLeftOf="@+id/guidelineVerticalMid"
                app:layout_constraintTop_toBottomOf="@+id/toolbar"
                app:srcCompat="@drawable/construction_icon" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:text="77"
                android:textAppearance="@android:style/TextAppearance.Material.Headline"
                android:textSize="72sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                app:layout_constraintLeft_toLeftOf="@+id/guidelineVerticalMid"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageView"
                app:layout_constraintVertical_bias="0.536" />


            <Button
                android:id="@+id/unloadedButton"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:elevation="2dp"
                android:fontFamily="sans-serif"
                android:text="@string/load"
                android:textAllCaps="false"
                android:textSize="30sp"
                android:theme="@style/AppTheme.Button.HoloBlueBright"
                style="@style/Widget.AppCompat.Button.Colored"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/guideline2"
                app:layout_constraintTop_toTopOf="@+id/guideline" />

            <Button
                android:id="@+id/loadedButton"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:clickable="true"
                android:elevation="2dp"
                android:fontFamily="sans-serif"
                android:text="@string/unload"
                android:textAllCaps="false"
                android:textSize="30sp"
                android:theme="@style/AppTheme.Button.Accent"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/guideline2"
                app:layout_constraintTop_toTopOf="@+id/guideline" />

            <Button
                android:id="@+id/unloadedMaterialButton"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:elevation="2dp"
                android:fontFamily="sans-serif"
                android:text="@string/top_soil"
                android:textAllCaps="false"
                android:textSize="30sp"
                android:theme="@style/AppTheme.Button.HoloGreenLight"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="@+id/guideline2"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/loadedMaterialButton"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:elevation="2dp"
                android:fontFamily="sans-serif"
                android:text="@string/top_soil"
                android:textAllCaps="false"
                android:textSize="30sp"
                android:theme="@style/AppTheme.Button.HoloRedLight"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="@+id/guideline2"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline"
                app:layout_constraintVertical_bias="0.0" />


            <android.support.constraint.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.618"
                tools:layout_editor_absoluteX="222dp"
                tools:layout_editor_absoluteY="25dp" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.5"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="309dp" />

            <android.support.constraint.Guideline
                android:id="@+id/guidelineVerticalMid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5"
                tools:layout_editor_absoluteX="180dp"
                tools:layout_editor_absoluteY="25dp" />

        </android.support.constraint.ConstraintLayout>
    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation"
        app:menu="@menu/menus"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start" />
</android.support.v4.widget.DrawerLayout>
